--- a/chatbot/administrator/templates/register.html
+++ b/chatbot/administrator/templates/register.html
@@ -100,6 +100,10 @@
         font-size: small;
         text-align: center;
     }
+    .messages {
+        background-color: lightgreen;
+        padding: 15px;
+    }
     /* Your existing CSS styles */
 </style>
 
@@ -113,6 +117,47 @@
 </div>
 
 <hr>
+
+{% if messages %}
+        {% for message in messages %}
+        <p class="messages" style="font-size: 16px; color: green;">{{ message }}</p>
+        {% endfor %}
+{% endif %}
+{% if user_form.errors %}
+        <div class="alert alert-danger">
+            <ul>
+            {% for field in user_form %}
+                {% if field.errors %}
+                    <li>{{ field.label }}: {{ field.errors }}</li>
+                {% endif %}
+            {% endfor %}
+            </ul>
+        </div>
+    {% endif %}
+    
+    {% if details_form.errors %}
+        <div class="alert alert-danger">
+            <ul>
+            {% for field in details_form %}
+                {% if field.errors %}
+                    <li>{{ field.label }}: {{ field.errors }}</li>
+                {% endif %}
+            {% endfor %}
+            </ul>
+        </div>
+    {% endif %}
+    
+    {% if teacher_form.errors %}
+        <div class="alert alert-danger">
+            <ul>
+            {% for field in teacher_form %}
+                {% if field.errors %}
+                    <li>{{ field.label }}: {{ field.errors }}</li>
+                {% endif %}
+            {% endfor %}
+            </ul>
+        </div>
+    {% endif %}
 
 <div class="form-container-wrapper slide-in">
     <div class="progress-background-title" style="margin-top: 30px;height: 60px;">
@@ -190,47 +235,9 @@
                 <input class="btn btn-primary slide-in" type="submit" value="Register Account" style="font-size: 14px; float: right; border-radius: 2px; ">
             </div>
         </form>
-        {% if messages %}
-        {% for message in messages %}
-        <h3 class="messages" style="font-size: 18px; color: black;">{{ message }}</h3>
-        {% endfor %}
-        {% endif %}
+        
 
-        {% if user_form.errors %}
-        <div class="alert alert-danger">
-            <ul>
-            {% for field in user_form %}
-                {% if field.errors %}
-                    <li>{{ field.label }}: {{ field.errors }}</li>
-                {% endif %}
-            {% endfor %}
-            </ul>
-        </div>
-    {% endif %}
-    
-    {% if details_form.errors %}
-        <div class="alert alert-danger">
-            <ul>
-            {% for field in details_form %}
-                {% if field.errors %}
-                    <li>{{ field.label }}: {{ field.errors }}</li>
-                {% endif %}
-            {% endfor %}
-            </ul>
-        </div>
-    {% endif %}
-    
-    {% if teacher_form.errors %}
-        <div class="alert alert-danger">
-            <ul>
-            {% for field in teacher_form %}
-                {% if field.errors %}
-                    <li>{{ field.label }}: {{ field.errors }}</li>
-                {% endif %}
-            {% endfor %}
-            </ul>
-        </div>
-    {% endif %}
+        
     </div>
 </div>
 
