--- a/chatbot/administrator/templates/activity.html
+++ b/chatbot/administrator/templates/activity.html
@@ -95,6 +95,18 @@
 
 <hr class="slide-in-left"> 
 
+{% if messages %}
+    <div class="container mt-3" >
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert" style="background-color: #edd4d4; color: #571515;">
+                {{ message }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        {% endfor %}
+    </div>
+{% endif %}
 
 <div class="wrapper">
 
@@ -102,115 +114,78 @@
         <div class="container p-5 slide-in">
             <!-- d-flex nowrap justify-content-center align-items-center -->
         
-                <div class="filter-buttons mb-3 text-center">
-                    Filter by Category:
-               
-                  
-                    <a href="{% url 'activity'%}" class="btn btn-outline-secondary btn-md mx-2">All</a>
-                    {% for type in activity_types %}
-                    <a href="?category={{ type }}" class="btn btn-outline-secondary btn-md mx-2">{{ type }}</a>
+            <div class="filter-buttons mb-3 text-center">
+                Filter by Category:
+                <a href="{% url 'activity'%}" class="btn btn-outline-secondary btn-md mx-2">All</a>
+                {% for type in activity_types %}
+                <a href="?category={{ type }}" class="btn btn-outline-secondary btn-md mx-2">{{ type }}</a>
                 {% endfor %}
-                </div>
-     
-
-
-       
+            </div>
 
             {% for activity in activities %}
-                <div class="row mb-3 justify-content-center align-items-center slide-in-left">
-
-                    <div class="card mb-3" style="width: 90%;height: 90%; padding: 0; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4); border-radius: 10px;">
-                        <div class="row g-0">
-                            <div class="col-md-2 d-flex flex-column justify-content-center align-items-center"
-                                style="border-right: 1px solid black;">
-                                <div class="month" style="color: black;">{{ activity.activity_date|date:"F" }}</div>
-                                <div class="day" style="color: black;">{{ activity.activity_date|date:"d" }}</div>
-
-                            </div>
-                            
-                            <div class="col-md-6">
-                                
-                                <div class="card-body">
-                                    <h5 class="card-title mb-4">{{activity.activity_name}}</h5>
-                                    <div class="no-margin">
-                                        <p class="card-text"><span class="emoji-text">🕒</span>
-                                            {{activity.start_time}} - {{activity.end_time}}
-                                               
-                                        </p>
-                                    </div>
-                                    <div class="no-padding">
-                                        <p class="card-text" style=" margin-left: 6px;"><span class="emoji-text">📍</span>
-                                            {{activity.location}}
-                                         </p>
-                                    </div>
+            <div class="row mb-3 justify-content-center align-items-center slide-in-left">
+                <div class="card mb-3" style="width: 90%; height: 90%; padding: 0; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4); border-radius: 10px;">
+                    <div class="row g-0">
+                        <div class="col-md-2 d-flex flex-column justify-content-center align-items-center" style="border-right: 1px solid black;">
+                            <div class="month" style="color: black;">{{ activity.activity_date|date:"F" }}</div>
+                            <div class="day" style="color: black;">{{ activity.activity_date|date:"d" }}</div>
+                        </div>
+                        
+                        <div class="col-md-6">
+                            <div class="card-body">
+                                <h5 class="card-title mb-4">{{ activity.activity_name }}</h5>
+                                <div class="no-margin">
+                                    <p class="card-text"><span class="emoji-text">🕒</span>{{ activity.start_time }} - {{ activity.end_time }}</p>
                                 </div>
-                                
-                            </div>
-                            
-
-                            <div class="col-md-2 d-flex flex-column justify-content-center align-items-center">
-                                <div class="month" style="font-weight: normal; color: black; font-size:medium;"> {{activity.activity_type}}</div>
-                            </div>
-                            <div class="col-md-2 d-flex flex-column justify-content-center align-items-center">
-                                <div class=" mt-2 text-center">
-                                    <!-- Details Button -->
-                                    <button data-href=""
-                                        class="btn btn-outline-success btn-xs mb-2" role="button" data-toggle="modal"
-                                        data-target="#activityModal">Details</button>
-                                    <!-- Edit Button -->
-                                    <a href=">"
-                                        class="btn btn-outline-primary btn-xs mb-2" role="button">Edit</a>
-                                    <!-- Delete Button -->
-                                    <div class="icon-container" onclick="confirmDelete(this)" data-username="{{ account.username }}" style="margin-left: 0px;">
-                                        <i class="fa fa-trash" id="deleteIcon"></i>
-                                    </div>
+                                <div class="no-padding">
+                                    <p class="card-text" style="margin-left: 6px;"><span class="emoji-text">📍</span>{{ activity.location }}</p>
                                 </div>
+                            </div>
+                        </div>
+                        
+                        <div class="col-md-2 d-flex flex-column justify-content-center align-items-center">
+                            <div class="month" style="font-weight: normal; color: black; font-size:medium;">{{ activity.activity_type }}</div>
+                        </div>
+                        <div class="col-md-2 d-flex flex-column justify-content-center align-items-center">
+                            <div class="mt-2 text-center">
+                                <!-- Details Button -->
+                                <button data-href="" class="btn btn-outline-success btn-xs mb-2" role="button" data-toggle="modal" data-target="#activityModal">Details</button>
+                                <!-- Edit Button -->
+                                <a href="" class="btn btn-outline-primary btn-xs mb-2" role="button">Edit</a>
+                                <!-- Delete Button -->
+                                <form method="POST" action="{% url 'delete-activity' activity.id %}" style="display:inline;">
+                                    {% csrf_token %}
+                                    <button type="submit" class="btn btn-outline-danger btn-xs mb-2" onclick="return confirm('Are you sure you want to delete this activity?');">
+                                        <i class="fa fa-trash"></i>
+                                    </button>
+                                </form>
                             </div>
                         </div>
                     </div>
                 </div>
-                {% endfor %}
-
-
-
-          
-
-
+            </div>
+            {% endfor %}
 
             <!-- Modal -->
-            <div class="modal fade" id="activityModal" tabindex="-1" role="dialog"
-                aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="activityModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h5 class="modal-title" id="activityModal">Activity Details</h5>
-                                <button type="button" class="custom-close-button" data-dismiss="modal"
-                                    aria-label="Close">
+                                <button type="button" class="custom-close-button" data-dismiss="modal" aria-label="Close">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
                             </div>
                             <div class="modal-body">
                                 <!-- Activity details will be loaded here -->
                             </div>
-                            <!-- <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        </div> -->
                         </div>
                     </div>
                 </div>
             </div>
 
-            <!-- <button class="floating-button">+</button> -->
- 
-
-
-
-
-
         </div>
-
-
     </div>
 </div>
 
@@ -228,7 +203,6 @@
         // Clear previous content before making the AJAX request
         modal.find('.modal-body').html('<div class="text-center"><img src="../pictures/icons/loading.gif" alt="Loading..."></div>');
 
-
         // Use jQuery to load the content of the URL into the modal body
         $.ajax({
             url: url,
@@ -241,8 +215,6 @@
     $(function () {
         $('[data-toggle="tooltip"]').tooltip()
     });
-
 </script>
-
 
 {% endblock %}
