--- a/chatbot/administrator/templates/accounts_list.html
+++ b/chatbot/administrator/templates/accounts_list.html
@@ -238,7 +238,7 @@
                 <div class="topic-background" style="background-color: #32373d; ">
                     <p style="color: white;  padding: 10px; text-align: center; margin-top: 10px; font-weight: 500;">User Account Details</p>
                 </div>
-                <p style = "color: black; font-weight: bold;">Account ID: <span id="accountID" style = "font-weight: 400; color: gray;"></span></p>
+                <p style = "color: black; font-weight: bold; visibility: hidden;">Account ID: <span id="accountID" style = "font-weight: 400; color: gray;"></span></p>
                 <p style = "color: black; font-weight: bold;">Full Name: <span id="fullName" style = "font-weight: 400; color: gray;"></span></p>
                 <p style = "color: black; font-weight: bold;">Username: <span id="userName" style="font-weight: 400; color: gray; "></span></p>
                 <p style = "color: black; font-weight: bold;">User Email: <span id="userEmail" style="font-weight: 400; color: gray;"></span></p>
